@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclExecute.c,v 1.167.2.53 2005/10/07 18:01:40 dgp Exp $
+ * RCS: @(#) $Id: tclExecute.c,v 1.167.2.54 2005/10/07 20:15:09 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -3875,11 +3875,11 @@ TclExecuteByteCode(interp, codePtr)
 	
 	    TRACE(("%s %s => ", O2S(valuePtr), O2S(value2Ptr)));
 	    if (Tcl_IsShared(valuePtr)) {
-		TclNewWideIntObj(objResultPtr, wResult);
+		objResultPtr = Tcl_NewWideIntObj(wResult);
 		TRACE(("%s\n", O2S(objResultPtr)));
 		NEXT_INST_F(1, 2, 1);
 	    }
-	    TclSetWideIntObj(valuePtr, &wResult);
+	    Tcl_SetWideIntObj(valuePtr, wResult);
 	    TRACE(("%s\n", O2S(valuePtr)));
 	    NEXT_INST_F(1, 1, 0);
 	}
